# qqbot-saki-chan

./: README.md  pyproject.toml  todo.md
data/: gokz_maps.json
src/plugins/gokz/api/: dataclasses.py  helper.py  kztimerglobal.py
src/plugins/gokz/core/: command_helper.py  config.py  formatter.py  kreedz.py  map_img_url.py
src/plugins/gokz/core/kz/: records.py  screenshot.py
src/plugins/gokz/db/: db.py  deps.py  models.py
src/plugins/gokz/plugins/: general.py  gokz_top.py  gokztop.py  group_join_approve.py  kzglobal.py
