[project]
name = "qqbot-saki-chan"
version = "0.1.1"
description = "A GOKZ bot based on the official QQ bot protocol"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    {name = "QQ", module_name = "nonebot.adapters.qq"},
]
plugins = ["nonebot_plugin_localstore", "nonebot_plugin_status", "nonebot_plugin_authrespond"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
